# tgbot_01_fastapi

./: README.md  docker-compose.yaml  pyproject.toml
api_app/: alembic.ini  main.py
api_app/core/: config.py  db_helper.py  taskiq_broker.py
api_app/core/admin/: auth.py  tunes.py  users.py
api_app/core/models/: base.py  tunes.py  users.py
api_app/core/schemas/: tunes.py  users.py
api_app/crud/: tunes.py  users.py
api_app/datebases/: users_requests.py
api_app/migrations/: env.py
api_app/migrations/versions/: 2025_09_07_2248-5cf7681fffe0_init.py  2025_09_08_2111-b5dfee5f9b8e_add_nullable_instead_of_optional.py  2025_09_08_2130-0937f18002cd_rename_token_to_uuid.py  2025_09_08_2202-1ce598c2c45e_add_nullable_instead_of_optional.py  2025_09_08_2216-7be94518ded1_add_optional_column.py  2025_09_13_0010-c9cdac76026e_new_init.py  2025_09_14_2233-4f00c55cd5c2_init.py  2025_09_15_0020-9434707cc79c_fix_len_in_name.py  2025_09_16_2122-a324f76e31f7_add_fields_to_prize.py  2025_09_16_2138-9837ccf19f8c_add_fields_to_prize.py  2025_09_16_2158-2d344d2d95d0_add_unique_name_for_prize.py  2025_09_16_2202-c5f7370f26ba_add_for_prize.py  2025_09_19_2245-a26bfd940010_refactor_for_prize.py  a78c29001352_initial_migration_for_postgresql.py
api_app/routers/: __init__.py  router.py  users.py
api_app/schemas/: users.py
api_app/services/: users.py
api_app/tasks/: tg_messages.py  tg_messages_utils.py
tg_bot/: main.py
tg_bot/handlers/: user.py
tg_bot/keyboards/: userkb.py
tg_bot/services/: api_requests.py
