[tool.poetry]
name = "tgbot-01-fastapi"
version = "0.1.0"
description = ""
authors = ["dan.toropov(home) <dan.toropov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
