 [tool.poetry]
name = "tgbot-01-fastapi"
version = "0.1.0"
description = ""
authors = ["dan.toropov(home) <dan.toropov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.22.0"
python-dotenv = "^1.1.1"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
taskiq = "^0.11.18"
taskiq-fastapi = "^0.3.5"
taskiq-redis = "^1.1.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
orjson = "^3.11.3"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
alembic = "^1.16.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
